k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mk-store-backend
  namespace: mk-store
  labels:
    app: mk-store-backend
spec:
  selector:
    app: mk-store-backend
  ports:
    - name: http
      port: 8081
      targetPort: http
