k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mk-store-frontend
  namespace: mk-store
  labels:
    app: mk-store-frontend
spec:
  selector:
    app: mk-store-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
